--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">SIH</string>
+    <string name="haridwar">Haridwar</string>
+    <string name="katarmal">Katarmal</string>
+    <string name="baijnath">Baijnath</string>
+    <string name="pbt">Patal Bhuvaneshwar</string>
+    <string name="binsar">Binsar Mahadev</string>
+    <string name="jageshwar">Jageshwar</string>
+    <string name="dandeshwar">Dandeshwar</string>
+    <string name="baleshwar">Baleshwar</string>
+    <string name="meetingshiva">Meeting Shiva</string>
+    <string name="forts">Forts of Kumaon</string>
+    <string name="malla">Malla Mahal</string>
+    <string name="banasur">Banasur Fort</string>
+    <string name="rajbhunga">Rajbhunga Fort</string>
 </resources>
