--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="jageshwar">Jageshwar</string>
     <string name="dandeshwar">Dandeshwar</string>
     <string name="baleshwar">Baleshwar</string>
-    <string name="meetingshiva">Meeting Shiva</string>
+    <string name="chardham">Chardham</string>
     <string name="forts">Forts of Kumaon</string>
     <string name="malla">Malla Mahal</string>
     <string name="banasur">Banasur Fort</string>
